# scikit-rec

./: .gitignore  404.html  README.md  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.github/workflows/: ci.yml  docs.yml  publish.yml  release.yml  tag-release.yml
advanced/hpo/: index.html
advanced/hybrid/: index.html
advanced/orchestration/: index.html
advanced/production/: index.html
docs/: index.md
docs/advanced/: hpo.md  hybrid.md  orchestration.md  production.md
docs/examples/: index.md
docs/getting-started/: datasets.md  installation.md  quick-start.md
docs/recommender-types/: bandits.md  comparison.md  gcsl.md  hierarchical.md  ranking.md  sequential.md  uplift.md
docs/stylesheets/: extra.css
docs/user-guide/: architecture.md  capability-matrix.md  collaborative-filtering.md  estimators.md  evaluation.md  hrnn.md  inference.md  ncf.md  retrieval.md  sasrec.md  scorers.md  training.md  two-tower.md
examples/: contextualized_two_tower_context_modes.ipynb  factory_pipeline_demo.ipynb  gcsl_multi_objective_movielens1m.ipynb  hpo_xgboost_movielens1m.ipynb  hrnn_movielens1m.ipynb  index.html  ranking_xgboost_movielens1m.ipynb  retrieval_two_stage.ipynb  sasrec_movielens1m_positives.ipynb  sasrec_movielens1m_ratings.ipynb  sasrec_movielens1m_ratings_mse.ipynb  uplift_modeling.ipynb
getting-started/datasets/: index.html
getting-started/installation/: index.html
getting-started/quick-start/: index.html
images/: RecommenderFlowcharts.pptx
recommender-types/bandits/: index.html
recommender-types/comparison/: index.html
recommender-types/gcsl/: index.html
recommender-types/hierarchical/: index.html
search/: search_index.json
skrec/: __init__.py  constants.py
skrec/dataset/: dataset.py  (+8 more)
tests/: conftest.py  test_bandits_recommender.py  test_base_estimator.py  test_base_retriever.py  test_base_scorer.py  test_classifier_estimators.py  test_content_based_retriever.py  test_dataset.py  test_dataset_iterator.py  test_deep_fm_network.py  test_embedding_estimators.py  test_embedding_retriever.py  test_estimator_smoke.py  test_evaluator_utils.py  test_example_datasets.py  test_gcsl_recommender.py  test_hrnn_estimator.py  test_import.py  test_independent_scorer.py  test_matrix_factorization_estimator.py  test_matrix_factorization_integration.py  test_metrics_utils.py  test_multiclass_scorer.py  test_multioutput_scorer.py  test_ncf_estimator.py  test_ncf_integration.py  test_numpy.py  test_orchestrator_factory.py  test_orchestrator_hpo.py  test_popularity_retriever.py  test_ranking_recommender.py  test_rec_datasets.py  test_recommender_evaluation_session.py  test_recommender_evaluator.py  test_recommender_metrics.py  test_regression_estimators.py  test_retrieval_integration.py  test_s3.py  test_sasrec_estimator.py  test_schema.py  (+7 more)
(+164 files in other folders)
